--- a/pychess/templates/pychess/review.html
+++ b/pychess/templates/pychess/review.html
@@ -1,11 +1,9 @@
-{% extends "pychess/layout.html" %}
-
+{% extends "pychess/layout.html"%}
 
 {% block title %}
-pyChess Home
+Review
 {% endblock %}
 
-
 {% block body %}
-Test
+Review test page.
 {% endblock %}
