--- a/pychess/templates/pychess/spectate.html
+++ b/pychess/templates/pychess/spectate.html
@@ -1,11 +1,9 @@
-{% extends "pychess/layout.html" %}
-
+{% extends "pychess/layout.html"%}
 
 {% block title %}
-pyChess Home
+Spectate
 {% endblock %}
 
-
 {% block body %}
-Test
+Spectate test page.
 {% endblock %}
