Added Game and Move models
Created the Game and Move database models. Visiting play/networkGame?g=new will now generate a room code and create a new Game entry, and play/networkGame?g=join will prompt the user for a room code.

--- a/pychess/static/pychess/styles.css
+++ b/pychess/static/pychess/styles.css
@@ -2,9 +2,14 @@ body {
     background-color: rgb(31, 27, 82);
 }
 
+a {
+    color:rgb(233, 208, 145);
+}
+
+
 .header {
     position:relative;
-    min-height:15vh;
+    min-height:150px;
     color:white;
 
 }
