--- a/pychess/templates/pychess/layout.html
+++ b/pychess/templates/pychess/layout.html
@@ -19,6 +19,7 @@
             </div>
             {% endif %}
             <div class="navbar">
+                <a class="navlink" href="{% url 'index' %}">Home</a>
                 {% if user.is_authenticated %}
                 <a class="navlink" href="{% url 'play' %}">Play</a>
                 <a class="navlink" href="{% url 'review' %}">Review</a>
